--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
       <div class="container">
         <h1>Welcome to STAQ Blog</h1>
         <p>This is a technical blog where...</p>
-        <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
       </div>
     </div>
 
