--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
         <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
       </div>
     </div>
-{{site.posts.sort_by { |post| post.date }.last}}
+{site.posts.sort_by { |post| post.date }.last}
     <!--<div class="container">
       Example row of columns
       <div class="row">
