--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@ layout: default
         <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
       </div>
     </div>
-{site.posts.sort_by { |post| post.date }.last}
-    <!--<div class="container">
+{% for post in site.posts limit:1 %}
+... Show the post ...
+{% endfor %}    <!--<div class="container">
       Example row of columns
       <div class="row">
         <div class="col-md-4">
