attempt #3 to show latest post on homepage

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ layout: default
         <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
       </div>
     </div>
-{% for post in site.posts offset:1 limit:1 %}
-... Show the post ...
+{% for posts in site.posts offset:1 limit:1 %}
 {% endfor %}    <!--<div class="container">
       Example row of columns
       <div class="row">
