--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@ layout: default
         <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
       </div>
     </div>
-{% for posts in site.posts offset:1 limit:1 %}
-{% endfor %}    <!--<div class="container">
+  {% assign post = site.posts.first %}
+  {% assign content = post.content %}
+  {% include post_detail.html %}
+  <!--<div class="container">
       Example row of columns
       <div class="row">
         <div class="col-md-4">
