slight syntax error

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
     </div>
   {% assign post = site.posts.first %}
   {% assign content = post.content %}
-  {% include post_detail.html %}
+  {% include blog_posts.html %}
   <!--<div class="container">
       Example row of columns
       <div class="row">
