--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: default
         <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
       </div>
     </div>
-  {% assign post = site.posts.first %}
+  <div>{% assign post = site.posts.first %}
   {% assign content = post.content %}
-  {% include blog_posts.html %}
+  {% include blog_posts.html %} </div>
   <!--<div class="container">
       Example row of columns
       <div class="row">
