--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
     </div>
   <div>{% assign post = site.posts.first %}
   {% assign content = post.content %}
-  {% include blog_posts.html %} </div>
+  </div>
   <!--<div class="container">
       Example row of columns
       <div class="row">
