--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@ layout: default
         <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
       </div>
     </div>
-  <div>{% assign post = site.posts.first %}
-  {% assign content = post.content %}
+  {% for post in site.posts %}
+  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+  <p class="author">
+    <span class="date">{{ post.date }}</span>
+  </p>
+  <div class="content">
+    {{ post.content }}
   </div>
+{% endfor %}
   <!--<div class="container">
       Example row of columns
       <div class="row">
