--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
       </div>
     </div>
   {% for post in site.posts limit:1%}
-  <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+  <h1><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h1>
   <p class="author">
     <span class="date">{{ post.date }}</span>
   </p>
