--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
   {% for post in site.posts limit:1%}
   <h1><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h1>
   <p class="author">
-    <span class="date">{{ post.date }}</span>
+    <span class="date">{{ post.date | date_to_string }}</span>
   </p>
   <div class="content">
     {{ post.content }}
