--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@ layout: default
 <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
   <table>
     <tr>
-      <td></td>
+      <td>title</td>
+    </tr>
+    <tr>
+      <td>title</td>
     </tr>
     <tr>
       <td></td>
@@ -22,10 +25,7 @@ layout: default
       <td></td>
     </tr>
     <tr>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
+      <td>title</td>
     </tr>
   </table>
       </div>
