--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="main-content">
+<div>
   <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
   {% for post in site.posts limit:1%}
   <h1><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h1>
