--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 ---
 layout: default
 ---
-<body class="menu">
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Slide Out Menu</title>
+  </head>
+<body>
 <div class="main-content">
   <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
   {% for post in site.posts limit:1%}
@@ -15,4 +20,10 @@ layout: default
 {% endfor %}
 <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
 </div>
+
+<nav class="nav-side">
+  Side Content
+  <a href="#" class="nav-toggle"></a>
+</nav>
  </body>
+</html>
