--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <html>
   <body>
-    <nav class="nav-side">
-  Side Content
-  <a href="#" class="nav-toggle"></a>
+    <nav class="nav-side nav-open">
+      Side Content
+      <a href="#" class="nav-toggle"></a>
 </nav>
 
 <div class="main-content">
