--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <html>
   <body>
-    <nav class="nav-side nav-open">
+    <nav class="nav-side">
       Side Content
       <a href="#" class="nav-toggle"></a>
 </nav>
