--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ layout: default
 <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
 </div>
 <srcipt src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></srcipt>
-<script src="js/nav,js"></script>
+<script src="../nav.js"></script>
  </body>
 </html>
