remove style of button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     {{ post.content }}
   </div>
 {% endfor %}
-<p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
+<p><a class="" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
 </div>
  </body>
 </html>
