--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@ layout: default
 ---
 <html>
   <body>
-    <nav class="nav-side">
-      Side Content
-    </nav>
 
 <div class="main-content">
   
@@ -21,5 +18,6 @@ layout: default
 {% endfor %}
 <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
 </div>
+<div class="headerDivider"></div>
  </body>
 </html>
