--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
     {{ post.content }}
   </div>
 {% endfor %}
-<p><a class="" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
+<p><a class="" href="blog_posts.html">View more posts &raquo;</a></p>
 </div>
  </body>
 </html>
