--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <body>
 <div class="main-content">
   
-  <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &raquo;</a></p>
+  <p><a class="btn btn-primary btn-lg" href="blog_posts.html" role="button">View more posts &#8674;</a></p>
   {% for post in site.posts limit:1%}
   <h1><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h1>
   <p class="author">
@@ -16,7 +16,7 @@ layout: default
     {{ post.content }}
   </div>
 {% endfor %}
-<p><a class="" href="blog_posts.html">View more posts &raquo;</a></p>
+<p><a class="" href="blog_posts.html">View more posts &#8674;</a></p>
 </div>
  </body>
 </html>
