add divider graphic to the page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ layout: default
   <div class="content">
     {{ post.content }}
   </div>
+  <div class="divider">
+    <img src="staq/Alias-Marketing-and-Design-Marketing-Agency-Dublin-and-Design-Home-page-dividers.png"
+  </div>
 {% endfor %}
 <p><a class="" href="blog_posts.html">View more posts &#8674;</a></p>
 </div>
