fix divider graphic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     {{ post.content }}
   </div>
   <div class="divider">
-    <img src="staq/Alias-Marketing-and-Design-Marketing-Agency-Dublin-and-Design-Home-page-dividers.png"
+    <img src="Alias-Marketing-and-Design-Marketing-Agency-Dublin-and-Design-Home-page-dividers.png">
   </div>
 {% endfor %}
 <p><a class="" href="blog_posts.html">View more posts &#8674;</a></p>
